<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CheatActivity">

    <!-- Cheat label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:text="@string/warning_text"
        android:textColor="@color/bloodred"
        android:textSize="50dp"
        android:textStyle="bold" />

    <!-- Answer label-->
    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="Answer" />

    <!-- sure button-->
    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/inticolor"
        android:text="@string/show_answer_button"
        android:textColor="@color/white" />

    <!-- Back button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:text="@string/back_button"
        android:textColor="@color/white"


        />

</LinearLayout>