<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- INTI Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/inti_logo"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4"

            >
            <!-- Welcome label-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@color/inticolor"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="4">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

                <!-- Name input textbox-->
                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5sp"
                    android:layout_weight="3"
                    android:backgroundTint="@android:color/black"
                    android:hint="@string/input_name"
                    android:inputType="textCapWords"
                    android:maxLength="100"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

            </LinearLayout>

            <!-- Get started button -->
            <Button
                android:id="@+id/start_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="Get Started"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_view_scoreboard"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="View Scoreboard"
                android:textColor="@color/white"
                android:background="@color/inticolor"/>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>